--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,118 @@
-@charset 'utf-8';
-@import 'https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css';
-@import 'fonts.css';
-
-/*링크 스타일
-  */
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-html {
-    font-size: 10px;
-}
-
-body {
-    background: #fff;
-    color: #181818;
-    font-size: 1.4rem;
-    font-family: 'Noto Sans';
-}
-
-
-/* 헤더 */
-
-.header {
-    background: #432219;
-    padding: 2rem;
-}
-
-
-/*로고*/
-
-.logo {
-    margin: 0;
-}
-
-
-/*메인 메뉴: 불릿을 쓰고 싶지 않다면 padding  */
-
-.main-medu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    color: #fff;
-}
+                                            @charset 'utf-8';
+                                            @import 'https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css';
+                                            @import 'fonts.css';
+                                            /* 박스 크기 box-sizing 기본값 변경*/
+                                            
+                                            *,
+                                            *::before,
+                                            *::after {
+                                                box-sizing: border-box;
+                                            }
+                                            /*링크 스타일*/
+                                            
+                                            a {
+                                                color: inherit;
+                                                text-decoration: none;
+                                            }
+                                            
+                                            html {
+                                                font-size: 10px;
+                                            }
+                                            
+                                            body {
+                                                background: #fff;
+                                                color: #181818;
+                                                font-size: 1.4rem;
+                                                font-family: 'Noto Sans';
+                                            }
+                                            /* 헤더 */
+                                            
+                                            .header {
+                                                background: #432219;
+                                                padding: 2rem;
+                                                position: relative;
+                                                /* margin-top: 100px; */
+                                            }
+                                            /*로고*/
+                                            
+                                            .logo {
+                                                margin: 0;
+                                            }
+                                            /*메인 메뉴: 불릿을 쓰고 싶지 않다면 padding  */
+                                            /**/
+                                            
+                                            .menubar-container {
+                                                background: yellow;
+                                                position: absolute;
+                                                top: 2rem;
+                                                right: 2rem;
+                                                height: 40px;
+                                                width: 40px;
+                                            }
+                                            
+                                            .btn-menubar {
+                                                border: 0px;
+                                                margin: 0px;
+                                                padding: 40px 0 0 0;
+                                                width: 40px;
+                                                height: 40px;
+                                                background: red;
+                                                overflow: hidden;
+                                                cursor: pointer;
+                                            }
+                                            
+                                            .menubar {
+                                                /*display: block;*/
+                                                position: absolute;
+                                                left: 0px;
+                                                width: 100%;
+                                                height: 5px;
+                                                background: white;
+                                                /*margin-bottom: 5px;*/
+                                                border-radius: 5px;
+                                                cursor: pointer;
+                                            }
+                                            
+                                            .menubar-top {
+                                                top: 0px;
+                                            }
+                                            
+                                            .menubar-middle {
+                                                top: 50%;
+                                                transform: translateY(-50%);
+                                            }
+                                            
+                                            .menubar-bottom {
+                                                bottom: 0px;
+                                            }
+                                            
+                                            .main-menu {
+                                                list-style: none;
+                                                color: #fff;
+                                                background: rgba(0, 0, 0, 0.5);
+                                                position: fixed;
+                                                left: -10rem;
+                                                top: 0;
+                                                margin: 0;
+                                                width: 0vw;
+                                                overflow: hidden;
+                                                height: 100vh;
+                                                font-size: 2rem;
+                                                padding: 5rem;
+                                                font-family: 'Noto Sans Bold', sans-serif;
+                                                transition: all 0.5s;
+                                            }
+                                            
+                                            .main-menu-act {
+                                                left: 0;
+                                                width: 70vw;
+                                            }
+                                            
+                                            .main-menu li {
+                                                margin-bottom: 2rem;
+                                            }
+                                            
+                                            .main-menu a {
+                                                /* background: blue; */
+                                                display: block;
+                                            }
