--- a/css/style.css
+++ b/css/style.css
@@ -1,245 +1,402 @@
-            @charset 'utf-8';
-            @import 'https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css';
-            @import 'fonts.css';
-            /* 박스 크기 box-sizing 기본값 변경*/
-            
-            *,
-            *::before,
-            *::after {
-                box-sizing: border-box;
-            }
-            /* 숨김 콘텐츠 */
-            
-            legend,
-            .readerable-hidden {
-                background: yellow;
-                position: absolute;
-                left: -99999em;
-                font-size: 0;
-                line-height: 0;
-                width: 1px;
-                height: 1px;
-                /* 가상 커서 : 기계적인 환경 고려. 0px 읽어 들이지 못하므로  */
-                margin: -1px 0 0 -1px;
-                overflow: hidden;
-            }
-            /*링크 스타일*/
-            
-            a {
-                color: inherit;
-                text-decoration: none;
-            }
-            
-            html {
-                font-size: 10px;
-            }
-            
-            body {
-                background: #fff;
-                color: #181818;
-                font-size: 1.4rem;
-                font-family: 'Noto Sans';
-            }
-            /* 헤더 */
-            
-            .header {
-                background: #432219;
-                padding: 2rem;
-                position: relative;
-                /* margin-top: 100px; */
-            }
-            /*로고*/
-            
-            .logo {
-                margin: 0;
-            }
-            /*메인 메뉴: 불릿을 쓰고 싶지 않다면 padding  */
-            /**/
-            
-            .menubar-container {
-                position: absolute;
-                top: 2rem;
-                right: 2rem;
-                height: 40px;
-                width: 40px;
-                overflow: hidden;
-            }
-            
-            .btn-menubar {
-                outline: 5px solid blue;
-                border: 0px;
-                margin: 0px;
-                padding: 40px 0 0 0;
-                width: 40px;
-                height: 40px;
-                background: transparent;
-                overflow: hidden;
-                cursor: pointer;
-            }
-            
-            .menubar {
-                /*display: block;*/
-                position: absolute;
-                left: 0px;
-                width: 100%;
-                height: 5px;
-                background: white;
-                /*margin-bottom: 5px;*/
-                border-radius: 5px;
-                cursor: pointer;
-                transition: all 500ms;
-            }
-            
-            .menubar-top {
-                top: 0px;
-            }
-            
-            .menubar-act .menubar-top {
-                top: 50%;
-                transform: rotate(45deg);
-            }
-            
-            .menubar-middle {
-                top: 50%;
-                transform: translateY(-50%);
-            }
-            
-            .menubar-act .menubar-middle {
-                transform: translate(-100%, -50%);
-            }
-            
-            .menubar-bottom {
-                bottom: 0px;
-            }
-            
-            .menubar-act .menubar-bottom {
-                top: 50%;
-                transform: rotate(-45deg);
-            }
-            
-            .main-menu {
-                list-style: none;
-                color: #fff;
-                background: rgba(0, 0, 0, 0.5);
-                position: fixed;
-                left: -10rem;
-                top: 0;
-                margin: 0;
-                width: 0vw;
-                overflow: hidden;
-                height: 100vh;
-                font-size: 2rem;
-                padding: 5rem;
-                font-family: 'Noto Sans Bold', sans-serif;
-                transition: all 0.5s;
-            }
-            
-            .main-menu-act {
-                left: 0;
-                width: 70vw;
-            }
-            
-            .main-menu li {
-                margin-bottom: 2rem;
-            }
-            
-            .main-menu a {
-                /* background: blue; */
-                display: block;
-            }
-            /* 검색 폼 */
-            
-            .search-form {
-                margin-top: 2rem;
-            }
-            
-            .search-form fieldset {
-                margin: 0;
-                padding: 0;
-                border: 0;
-            }
-            
-            .search-form input[type='search'] {
-                border: 1px solid #aaa;
-                padding: 5px 1px 1px 5px;
-                margin: 0 5px 0 0;
-                width: calc(100% - 50px);
-                /*rem 단위 사용 시 safari에서 버그가 발생할 수 있음  */
-                height: 3.5rem;
-                border-radius: 5px;
-                vertical-align: middle;
-            }
-            
-            .search-form input[type='image'] {
-                width: 40px;
-                height: 40px;
-                vertical-align: middle;
-            }
-            /*  메인 컨텐츠 */
-            
-            .content {
-                padding: 2em;
-            }
-            /* 웹카페 서적  */
-            
-            .book {
-                background: pink;
-            }
-            
-            .subject {
-                margin: 0px;
-                height: 60px;
-                padding-left: 70px;
-                font-size: 2rem;
-                background: skyblue url('images/sprite_main.png') no-repeat;
-            }
-            
-            .en-subject {
-                display: block;
-                margin-top: 0.5rem;
-            }
-            
-            .book-subject {
-                background-position: 0 0;
-            }
-            
-            .book-subject .en-subject {
-                color: #abd375;
-            }
-            
-            .book-cover {
-                /* background: lime; */
-                margin: 1rem auto;
-                width: 60%;
-                text-align: center;
-            }
-            
-            .book-cover img {
-                max-width: 100%;
-                height: auto;
-            }
-            
-            .book-detail {
-                text-align-last: center;
-            }
-            
-            .book-heading,
-            .book-author-name,
-            .book-grade {
-                margin: o;
-            }
-            
-            .book-author,
-            .book-authorname {
-                display: inline-block;
-            }
-            
-            .book-grade::before {
-                content: "*****";
-                color: #afd371;
-                font-size: 2.5rem;
-            }
-            
-            .book-summary {
-                line-height: 1.5;
-            }
+    @charset 'utf-8';
+    @import 'https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css';
+    @import 'fonts.css';
+    /* 박스 크기 box-sizing 기본값 변경*/
+    
+    *,
+    *::before,
+    *::after {
+        box-sizing: border-box;
+    }
+    /* 숨김 콘텐츠 */
+    
+    legend,
+    .readerable-hidden {
+        background: yellow;
+        position: absolute;
+        left: -99999em;
+        font-size: 0;
+        line-height: 0;
+        width: 1px;
+        height: 1px;
+        /* 가상 커서 : 기계적인 환경 고려. 0px 읽어 들이지 못하므로  */
+        margin: -1px 0 0 -1px;
+        overflow: hidden;
+    }
+    /*링크 스타일*/
+    
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+    
+    html {
+        font-size: 10px;
+    }
+    
+    body {
+        background: #fff;
+        color: #181818;
+        font-size: 1.4rem;
+        font-family: 'Noto Sans';
+    }
+    /* 헤더 */
+    
+    .header {
+        background: #432219;
+        padding: 2rem;
+        position: relative;
+        /* margin-top: 100px; */
+    }
+    /*로고*/
+    
+    .logo {
+        margin: 0;
+    }
+    /*메인 메뉴: 불릿을 쓰고 싶지 않다면 padding  */
+    /**/
+    
+    .menubar-container {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+        height: 40px;
+        width: 40px;
+        overflow: hidden;
+    }
+    
+    .btn-menubar {
+        outline: 5px solid blue;
+        border: 0px;
+        margin: 0px;
+        padding: 40px 0 0 0;
+        width: 40px;
+        height: 40px;
+        background: transparent;
+        overflow: hidden;
+        cursor: pointer;
+    }
+    
+    .menubar {
+        /*display: block;*/
+        position: absolute;
+        left: 0px;
+        width: 100%;
+        height: 5px;
+        background: white;
+        /*margin-bottom: 5px;*/
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all 500ms;
+    }
+    
+    .menubar-top {
+        top: 0px;
+    }
+    
+    .menubar-act .menubar-top {
+        top: 50%;
+        transform: rotate(45deg);
+    }
+    
+    .menubar-middle {
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    
+    .menubar-act .menubar-middle {
+        transform: translate(-100%, -50%);
+    }
+    
+    .menubar-bottom {
+        bottom: 0px;
+    }
+    
+    .menubar-act .menubar-bottom {
+        top: 50%;
+        transform: rotate(-45deg);
+    }
+    
+    .main-menu {
+        list-style: none;
+        color: #fff;
+        background: rgba(0, 0, 0, 0.5);
+        position: fixed;
+        left: -10rem;
+        top: 0;
+        margin: 0;
+        width: 0vw;
+        overflow: hidden;
+        height: 100vh;
+        font-size: 2rem;
+        padding: 5rem;
+        font-family: 'Noto Sans Bold', sans-serif;
+        transition: all 0.5s;
+    }
+    
+    .main-menu-act {
+        left: 0;
+        width: 70vw;
+    }
+    
+    .main-menu li {
+        margin-bottom: 2rem;
+    }
+    
+    .main-menu a {
+        /* background: blue; */
+        display: block;
+    }
+    /* 검색 폼 */
+    
+    .search-form {
+        margin-top: 2rem;
+    }
+    
+    .search-form fieldset {
+        margin: 0;
+        padding: 0;
+        border: 0;
+    }
+    
+    .search-form input[type='search'] {
+        border: 1px solid #aaa;
+        padding: 5px 1px 1px 5px;
+        margin: 0 5px 0 0;
+        width: calc(100% - 50px);
+        /*rem 단위 사용 시 safari에서 버그가 발생할 수 있음  */
+        height: 3.5rem;
+        border-radius: 5px;
+        vertical-align: middle;
+    }
+    
+    .search-form input[type='image'] {
+        width: 40px;
+        height: 40px;
+        vertical-align: middle;
+    }
+    /*  메인 컨텐츠 */
+    
+    .content {
+        padding: 2em;
+    }
+    /* 웹카페 서적  */
+    
+    margin-top: 0.5rem;
+    .book {
+        background: pink;
+    }
+    
+    .book-subject {
+        background-position: 0 0;
+    }
+    
+    .book-subject .en-subject {
+        color: #abd375;
+    }
+    
+    .book-cover {
+        /* background: lime; */
+        margin: 1rem auto;
+        width: 60%;
+        text-align: center;
+    }
+    
+    .book-cover img {
+        max-width: 100%;
+        height: auto;
+    }
+    
+    .book-detail {
+        text-align-last: center;
+    }
+    
+    .book-heading,
+    .book-author-name,
+    .book-grade {
+        margin: o;
+    }
+    
+    .book-author,
+    .book-authorname {
+        display: inline-block;
+    }
+    
+    .book-grade::before {
+        content: "*****";
+        color: #afd371;
+        font-size: 2.5rem;
+    }
+    
+    .book-summary {
+        line-height: 1.5;
+    }
+    /* 묻고 답하기 */
+    
+    .qna-subject {
+        background-position: 0 -115px
+    }
+    
+    .qna-subject .en-subject {
+        color: #c7b39a;
+    }
+    
+    .qna-list {
+        background: transparent;
+    }
+    
+    .qna-list li {
+        margin: 0rem;
+    }
+    
+    .qna-list a {
+        display: inline-block;
+        width: calc(100% - 70px);
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
+    .qna-list time {
+        float: right;
+    }
+    /* 새소식 */
+    
+    .news-subject {
+        background-position: 0 -230px;
+    }
+    
+    .news-subject .en-subject {
+        color: #e8ca58;
+    }
+    
+    .news-video {
+        margin: 1rem 0;
+        width: 100%;
+        height: auto;
+    }
+    
+    .news-date {
+        display: block;
+        text-align: right;
+        margin-bottom: 1rem;
+    }
+    
+    .news-summary {
+        line-height: 1.5em;
+    }
+    /* 인기 검색어 */
+    
+    .favorite-keyword-subject {
+        background-position: 0 -345px;
+    }
+    
+    .favorite-keyword-list {
+        padding: 0;
+        overflow: hidden;
+    }
+    
+    .favorite-keyword-list li {
+        counter-increment: number;
+        margin: 1rem 0;
+    }
+    /* 숫자 자동부여 */
+    
+    .favorite-keyword-list li::before {
+        content: counter(number, decimal);
+        background: #ec6b4e;
+        color: #fff;
+        font-size: 1.2rem;
+        padding: 2px 5px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        display: inline-block;
+        text-align: center;
+        line-height: 30px;
+    }
+    
+    .keyword-wrap {
+        background: silver;
+        display: inline-block;
+        width: calc(100% - 35px);
+        height: 30px;
+        line-height: 30px;
+        border-radius: 15px;
+    }
+    
+    .keyword-wrap span {
+        background: brown;
+        color: #ffffff;
+        border-radius: 15px 0 0 15px;
+        padding-left: 2em;
+        display: inline-block;
+        line-height: 30px;
+    }
+    
+    .no1 {
+        width: 70%;
+    }
+    
+    .no2 {
+        width: 60%;
+    }
+    
+    .no3 {
+        width: 50%;
+    }
+    
+    .no4 {
+        width: 40%;
+    }
+    
+    .no5 {
+        width: 30%;
+    }
+    /*푸터   */
+    
+    .footer {
+        padding: 2rem;
+        color: #fff;
+        background-color: #432219;
+        background-image: repeating-linear-gradient(-45deg, #462a1f 5px, #462a1f 10px, #432219 10px, #432219 20px);
+        /* background-image: repeating-linear-gradient(45deg, red 5px, blue 10px, gold 10px, red 20px); */
+        /* background-image: radial-gradient(circle at top right, beige, coral); */
+        /* background-image: linear-gradient(to top, red 0%, #A355BE 50%, navy 100%);
+        background: linear-gradient(to bottom, #85b223 50%, #21af5a 50%, #207cca 100%, #8e4d89 100%); */
+    }
+    /*주소 및 저작권 정보  */
+    
+    address,
+    .copyright {
+        text-align: center;
+        font-style: normal;
+    }
+    /* 가이드 링크 */
+    
+    .guide {
+        list-style: none;
+        padding: 0;
+    }
+    
+    .guide::after {
+        /* 플로트에는 빈 스페이스 처리를 위해 에프터를 사용한다.  */
+        content: "";
+        display: block;
+        clear: both;
+    }
+    
+    .guide li {
+        width: 25%;
+        letter-spacing: -1px;
+        float: left;
+        margin: 0.5rem 0;
+    }
+    
+    @media screen and (min-width:768px) {
+        .guide li {
+            width: 25%;
+            text-align: center;
+        }
+    }
+    /* reference: https://github.com/seulbi/seulbi.github.io/blob/master/index.html */
